# Claude-TG-BOT

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  template.yaml
scripts/: local_scan.py  local_webhook.py  set_webhook.py
src/config/: feeds.py  settings.py
src/core/: article_ranker.py  claude_client.py  deduplication.py  prompt_templates.py  rss_fetcher.py
src/handlers/: news_scanner.py  telegram_webhook.py
src/storage/: dynamodb.py  models.py
src/telegram/: bot.py  keyboards.py  message_formatter.py
tests/: conftest.py  test_article_ranker.py  test_claude_client.py  test_deduplication.py  test_handlers.py  test_rss_fetcher.py  test_telegram_bot.py
tests/fixtures/: sample_feed.xml
